<resources>
    <string name="app_name">Life</string>
    <string name="bill">账单:%s</string>
    <string name="no_creditcards">没有添加任何卡片</string>
    <string name="no_active_creditcards">没有激活中的卡片</string>
    <string name="no_completed_creditcards">没有完成过的卡片</string>
    <string name="add_cards">添加卡片</string>
    <string name="all_cards">所有的</string>
    <string name="all_completed_cards">完成的</string>
    <string name="all_active_cards">激活的</string>
    <string name="create_new_card_success">创建新卡片成功</string>
    <string name="edit_card_success">编辑卡片成功</string>
    <string name="menu_filter">过滤</string>
    <string name="all_filter">所有卡片</string>
    <string name="card_belong_to">卡片归属：</string>
    <string name="card_number">卡号：</string>
    <string name="date_bill">账单日：</string>
    <string name="bill_text">账单：</string>
    <string name="select_date">选择日期</string>
    <string name="repayment_date">还款日：</string>
    <string name="repayment_count">还款：</string>
    <string name="confirm">确定</string>
    <string name="imcomplete_information">信息不完整</string>
    <string name="add_cards_information_confirm">信息确认</string>
    <string name="cancel">取消</string>
    <string name="no_card">没有这张卡片</string>
</resources>
