<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_bankname"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_bankname"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_bankname"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/card_belong_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_card_number"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/card_number"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bankname" />

    <EditText
        android:id="@+id/et_card_number"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_card_number"
        app:layout_constraintTop_toBottomOf="@+id/et_bankname" />

    <TextView
        android:id="@+id/tv_date_bill"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/date_bill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_number" />

    <TextView
        android:id="@+id/tv_select_date_bill"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/select_date"
        app:layout_constraintStart_toEndOf="@+id/tv_date_bill"
        app:layout_constraintTop_toBottomOf="@+id/et_card_number" />

    <TextView
        android:id="@+id/tv_bill"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/bill_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_bill" />

    <EditText
        android:id="@+id/et_bill"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/tv_bill"
        app:layout_constraintTop_toBottomOf="@+id/tv_select_date_bill" />

    <TextView
        android:id="@+id/tv_repayment_date"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/repayment_date"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bill" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_date"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/tv_repayment_date"
        app:layout_constraintTop_toBottomOf="@+id/et_bill" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/repayment_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_repayment_date" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>