<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_bankname"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_bankname"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|end"
        android:text="@string/card_belong_to"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_card_number"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|end"
        android:text="@string/card_number"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bankname" />

    <EditText
        android:id="@+id/et_card_number"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/et_bankname" />

    <TextView
        android:id="@+id/tv_date_bill"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|end"
        android:text="@string/date_bill"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_number" />

    <TextView
        android:id="@+id/tv_select_date_bill"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/select_date"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/et_card_number" />

    <TextView
        android:id="@+id/tv_bill"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|end"
        android:text="@string/bill_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_bill" />

    <EditText
        android:id="@+id/et_bill"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_select_date_bill" />

    <TextView
        android:id="@+id/tv_repayment_date"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|end"
        android:text="@string/repayment_date"

        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bill" />

    <TextView
        android:id="@+id/tv_select_date_repayment"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/select_date"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/et_bill" />

    <TextView
        android:id="@+id/tv_repayment_count"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_widget_hight"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|end"
        android:text="@string/repayment_count"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_repayment_date" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:background="#0f0"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="89dp" />

    <LinearLayout
        android:layout_width="278dp"
        android:layout_height="286dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"></LinearLayout>

</android.support.constraint.ConstraintLayout>